syntax = "proto3";
//option go_package = ".;models";
option go_package = "eventbus/models";
message  UserModel {
    int32 UserId =1;   //传入的商品ID
    string UserName=2;

}
